# zrive-ds

./: .gitignore  README.md  pyproject.toml
Module 4/: main.ipynb
Module1/: meteo_functions.py
Module2/: main.ipynb
Module2/.ipynb_checkpoints/: main-checkpoint.ipynb
Module3/: main3.ipynb
Module4/: main.ipynb  main.py  train.py  utils.py
Module4/models/: gb_basic_20251104-19.sav
Module6/: app.py
Module6/src/: metrics_class.py  metrics_middleware.py  routes.py
Module6/src/handlers/: homepage.py  metrics.py  status.py
zrive-ds/module1/: main.py  meteo_functions.py
