[project]
name = "zrive"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black>=25.9.0",
    "matplotlib>=3.10.6",
    "mypy>=1.18.2",
    "numpy>=2.2.6",
    "pandas>=2.3.2",
    "pytest>=8.4.2",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
]
