[project]
name = "zrive"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black>=25.9.0",
    "boto3>=1.40.50",
    "dotenv>=0.9.9",
    "fastapi>=0.121.3",
    "matplotlib>=3.10.6",
    "mypy>=1.18.2",
    "numpy>=2.2.6",
    "pandas==2.3.3",
    "prometheus-client>=0.23.1",
    "pytest>=8.4.2",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.0.0",
]
